Projet total/Assembleur/tests/bad/testfile-bad-mov-5.ms
; can't move memory to memory
    .section text
mov x (%rax)

    .section data
x: